--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -950,7 +950,6 @@ input:checked + .slider:before {
     right: 1%;
     width: 350px;
     height: 350px;
-    pointer-events: none; /* allow hover */
     z-index: 3;
 }
 #starrailmap {
@@ -992,16 +991,18 @@ input:checked + .slider:before {
     cursor: pointer;
     color: white;
 }
-#starrailmap-wrapper:hover #starrailmap {
+/* only allow hover effects when wrapper has .active */
+#starrailmap-wrapper.active:hover #starrailmap {
     opacity: 1 !important;
     transform: scale(1.75);
 }
 
-#starrailmap-wrapper:hover #guessButton {
+#starrailmap-wrapper.active:hover #guessButton {
     display: block;
     opacity: 1;
     transform: scale(1.75); /* match map scale */
 }
+
 .guess-overlay {
     position: fixed;
     top: 0;
@@ -1426,11 +1427,11 @@ input:checked + .slider:before {
         width: 250px;
         height: 250px;
     }
-    #starrailmap-wrapper:hover #starrailmap {
+    #starrailmap-wrapper.active:hover #starrailmap {
     transform: scale(1.5);
     }
 
-    #starrailmap-wrapper:hover #guessButton {
+    #starrailmap-wrapper.active:hover #guessButton {
         transform: scale(1.5); /* match map scale */
     }
     #resultmap {
